# traqq

./: .gitignore  Cargo.toml  LICENSE  TODO.md  readme.md
src/: client.rs  constants.rs  lib.rs  main.rs  server.rs  tests.rs  utils.rs
src/deprecated/: .main.rs
src/idea/: client.rs  server.rs  service_wrapper.rs
src/storage/: memory.rs  mod.rs  redis.rs
