[package]
name = "traqq"
version = "0.2.0"
edition = "2021"
authors = ["<taky@taky.com>"]
description = "High-performance event metrics with pluggable storage backends"
repository = "https://github.com/oeo/traqq"
license = "MIT"
readme = "README.md"

[features]
default = []
redis-storage = ["dep:redis"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
chrono-tz = "0.10.0"
rand = "0.8.5"
redis = { version = "0.27", optional = true }

[dev-dependencies]
tokio = { version = "1.28.0", features = ["full"] }

